# passbase

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  README.md  docker-compose.yml
src/: config.rs  crud.rs  keybase.rs  main.rs
test/: Dockerfile  tests.sh
